# Arkea

./: .cursorrules  .editorconfig  .flake8  .gitattributes  .gitignore  .markdownlintignore  .poc-config.sh  .poc-profile  .pre-commit-config.yaml  .secrets.baseline  .shellcheckrc  01_install_hcd.sh  02_install_spark_kafka.sh  03_start_hcd.sh  04_start_kafka.sh  05_setup_kafka_hcd_streaming.sh  06_test_kafka_hcd_streaming.sh  70_kafka-helper.sh  80_verify_all.sh  90_list_scripts.sh  AGENTS.md  ANALYSE_BENEFICES_ARKEA_MIGRATION_HCD.md  A_PLUS_ROADMAP.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISTINCTION_BENEFICES_VS_IMPACTS_ARKEA.md  JUSTIFICATION_RESULTATS_POC_ARKEA.md  LICENSE  Makefile  NOMBRE_EXIGENCES_PAR_USE_CASE_POC_ARKEA.md  PODMAN_RULES.md  README.md  SECURITY.md  SYNTHESE_RESULTATS_BENEFICES_HCD_ARKEA.md  SYNTHESE_TESTS_VECTOR_HYBRID_SEARCH_POC_ARKEA.md  SYNTHESE_USE_CASES_POC.md  _config.yml  create_kafka_schema.cql  kafka_to_hcd_streaming.scala  (+7 more)
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: README.md  active-leg-gate.yml  codeql.yml  docs.yml  lint.yml  nightly-deep-scan.yml  pr-quick-gate.yml  release.yml  security.yml  shell-tests.yml  test-multi-os.yml  test.yml  tests.yml  tests.yml.example
archive/: README.md
binaire/: README.md  kafka
binaire/hcd-1.2.3/: $REPORT_FILE
business/: ANALYSE_BENEFICES_ARKEA_MIGRATION_HCD.md  DISTINCTION_BENEFICES_VS_IMPACTS_ARKEA.md  SYNTHESE_RESULTATS_BENEFICES_HCD_ARKEA.md
docs/: ANALYSE_AMELIORATION_RACINE_ARKEA.md  ANALYSE_BLOB_VS_JSON_ARKEA.md  ANALYSE_BONNES_PRATIQUES.md  ANALYSE_COBOL_VS_PYTHON_GENERATION.md  ANALYSE_DOUBLON_HCD_1_2_3.md  ANALYSE_ETAT_ART_HBASE.md  ANALYSE_INPUTS_CLIENTS_COMPLETE.md  ANALYSE_PROPOSITION_IBM_MECE.md  API.md  ARCHITECTURE.md  ARCHITECTURE_POC_COMPLETE.md  AUDIT_BONNES_PRATIQUES_RACINE_2025.md  AUDIT_BONNES_PRATIQUES_SCRIPTS_2025.md  AUDIT_COMPLET_OPTIONS_1_2_3_2025.md  AUDIT_COMPLET_PROJET_2025.md  AUDIT_COMPLET_PROJET_ARKEA_2025_V2.md  AUDIT_COMPLET_RACINE_ARKEA_2025.md  AUDIT_COMPLET_REPERTOIRE_ARKEA.md  AUDIT_DOCUMENTATION_2025.md  AUDIT_FICHIERS_OBSOLETES_2025.md  AUDIT_INTEGRAL_PROJET_ARKEA_2025.md  AUDIT_LIVRAISON_CLIENT_2025.md  AUDIT_MARKDOWN_OBSOLETES_2025.md  AUDIT_MCKINSEY_MECE_COMPLET_ARKEA_2025.md  AUDIT_MCKINSEY_PROJET_ARKEA_2025.md  AUDIT_PORTABILITE_CROSS_PLATFORM_2025.md  AUDIT_VERIFICATION_APPROFONDIE_2025.md  CANONICAL_RUNTIME_MATRIX.md  COMMON_MISTAKES.md  CONFIGURATION_ENVIRONNEMENT.md  DEPLOYMENT.md  DOCUMENTATION_FINALE.md  DOCUMENTATION_TESTS_POC_ARKEA.md  ETAT_AVANCEMENT_ET_PROCHAINES_ETAPES_2025.md  ETAT_FINAL_ET_ROADMAP_2025.md  EXPLICATION_NETTOYAGE_STRUCTURE.md  GUIDE_ACCES_SECURISE_GITHUB.md  GUIDE_CHANGELOG.md  GUIDE_CHOIX_POC.md  GUIDE_COMPARAISON_POCS.md  (+48 more)
docs/adr/: 0000-template.md  0001-podman-over-docker.md  0002-hcd-over-hbase.md  0003-spark-version.md  0004-kafka-version.md  (+2 more)
evidence/: JUSTIFICATION_RESULTATS_POC_ARKEA.md  NOMBRE_EXIGENCES_PAR_USE_CASE_POC_ARKEA.md  SYNTHESE_TESTS_VECTOR_HYBRID_SEARCH_POC_ARKEA.md
inputs-clients/: README.md
inputs-ibm/: PROPOSITION_MECE_MIGRATION_HBASE_HCD.md  README.md  [fuzzy_and_complex_search_with_vector_search].py
lib/: README.md  common.sh  search_utils.py
monitoring/: docker-compose.monitoring.yml
poc-design/: README.md
scripts/: demo.sh  migrate_hardcoded_paths.sh
software/: README.md
tests/: README.md  conftest.py  run_all_tests.sh  run_consistency_tests.sh  run_e2e_tests.sh  run_integration_tests.sh  run_portability_tests.sh  run_unit_tests.sh
(+1420 files in other folders)
